minor: renumbered titles

--- a/07_transform.qmd
+++ b/07_transform.qmd
@@ -1,7 +1,8 @@
 ---
-title: "5: Transforming data"
+title: "07: Transforming data"
 subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
+editor: visual
 ---
 
 ------------------------------------------------------------------------
